fix: Remove visual bug
There was too much space at the top of the seeking_description box

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -26,7 +26,7 @@ a {
   color: initial;
 }
 p.lead {
-  margin-top: 30px;
+  margin-top: -5px;
 }
 ::selection {
   background: #555;
